Fix overflow pokemon scrolling

--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,12 +1,14 @@
-.search-wrapper ul {
-    justify-content: center;
+.search-wrapper div.result-wrapper {
+    box-shadow: 0 4px 6px 0 #8783d1;
+    border-radius: 0 0 25px 25px;
+    height: 250px;
+}
+
+.search-wrapper div.result-wrapper > ul{
     margin: 0;
     padding: 0;
-    box-shadow: 0 4px 6px 0 #8783d1;
-    z-index: 300;
-    border-radius: 0 0 25px 25px;
     overflow-y: scroll;
-    height: 250px;
+    height: 92%;
 }
 
 .search-wrapper ul > li {
